@@ -2,7 +2,7 @@
 
 # Generate SWIG of the TRUST ICoCo interface:
 
-source $TRUST_MEDCOUPLING_ROOT/env.sh
+source $TRUST_MEDCOUPLING_ROOT/env.sh || echo "MEDCoupling not available"
 cd $project_directory/swig
 
 mkdir -p build
